line-spacing on mobile fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,7 @@ body {
 h1 {
   font-family: "Tungsten";
   font-size: 24vh;
+  font-weight: normal;
   line-height: 75%;
   text-transform: uppercase;
   letter-spacing: -0.01em;
@@ -106,6 +107,7 @@ h1 {
   }
 
   h1 {
+    font-weight: normal;
     font-size: 16vh;
   }
 
